Thu Aug 28 22:39:54 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* NEWS:
	* README:
	* gaim.pro:
	* mkstuff.conf:
	  - Bumped the version up to 0.3cvs.

Thu Aug 28 22:27:53 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimBListWindow.cpp:
	* src/QGaimConvButton.cpp:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Synced with libgaim 0.68cvs.

Fri Aug 15 16:43:57 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* NEWS:
	* mkstuff.conf:
	  - Releasing 0.2.

Fri Aug 15 16:26:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimImageUtils.cpp:
	* src/QGaimImageUtils.h:
	  - Offline accounts in the accounts window are now greyed instead
	    of dimmed.

Fri Aug 15 15:03:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimProtocolUtils.cpp:
	* src/QGaimProtocolUtils.h:
	  - Added protocol icon caching.

Fri Aug 15 14:20:05 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBuddyList.cpp:
	* src/QGaimDialogs.cpp:
	* src/QGaimDialogs.h:
	  - Clicking the New IM button now brings up a dialog.

Fri Aug 15 14:03:03 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* data/images/new-chat.png:
	* data/images/new-im.png:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* gaim.pro:
	  - The Send/New IM and Open/New Chat icons now have a happy little
	    magic star on the side of them when the action is to create a
	    new IM or chat.

Fri Aug 15 13:42:09 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Added idle times to the buddy list.

Fri Aug 15 13:26:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Double-clicking a chat in the buddy list now joins the chat.

Fri Aug 15 13:21:39 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp: