@@ -2,6 +2,8 @@ Gaim for Qtopia Release Notes
 -----------------------------
 
 version 0.3:
+	* Added support for registering accounts on protocol plugins that
+	  support it (such as Jabber).
 
 version 0.2 (Friday, 15-August-2003):
 	* Fixed a bug where Gaim would crash if libgaim-plugins-oscar
